--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,35 @@
+# Core data processing
 pandas>=1.3.0
+numpy>=1.21.0
+
+# HTTP requests and web scraping
+requests>=2.25.0
+requests-html>=0.10.0
+urllib3>=1.26.0
+
+# Web scraping and parsing
+beautifulsoup4>=4.9.0
+lxml>=4.0.0
+bs4>=0.0.1
+
+# Selenium for web automation
+selenium>=4.0.0
+webdriver-manager>=3.5.0
+selenium-stealth>=1.0.6
+
+# Progress bars and utilities
+tqdm>=4.60.0
+
+# Excel file handling
+openpyxl>=3.0.7
+xlrd>=2.0.0
+
+# Database (if needed)
 psycopg2-binary>=2.9.1
 SQLAlchemy>=1.4.0
+
+# Environment variables
 python-dotenv>=0.19.0
-openpyxl>=3.0.7 
+
+# Additional utilities
+python-dateutil>=2.8.0
