--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,75 @@
-# Core data processing
-pandas>=1.3.0
-numpy>=1.21.0
-
-# HTTP requests and web scraping
-requests>=2.25.0
-requests-html>=0.10.0
-urllib3>=1.26.0
-
-# Web scraping and parsing
-beautifulsoup4>=4.9.0
-lxml>=4.0.0
-bs4>=0.0.1
-
-# Selenium for web automation
-selenium>=4.0.0
-webdriver-manager>=3.5.0
-selenium-stealth>=1.0.6
-
-# Progress bars and utilities
-tqdm>=4.60.0
-
-# Excel file handling
-openpyxl>=3.0.7
-xlrd>=2.0.0
-
-# Database (if needed)
-psycopg2-binary>=2.9.1
-SQLAlchemy>=1.4.0
-
-# Environment variables
-python-dotenv>=0.19.0
-
-# Additional utilities
-python-dateutil>=2.8.0
-lxml_html_clean
+appdirs==1.4.4
+appnope==0.1.4
+asttokens==3.0.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+comm==0.2.2
+cssselect==1.3.0
+debugpy==1.8.14
+decorator==5.2.1
+et_xmlfile==2.0.0
+executing==2.2.0
+fake-useragent==2.2.0
+h11==0.16.0
+idna==3.10
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+lxml==5.4.0
+lxml_html_clean==0.4.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.3.1
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.0
+parse==1.20.2
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyee==13.0.0
+Pygments==2.19.2
+pyppeteer==0.0.25
+pyquery==2.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pyzmq==27.0.0
+requests==2.32.4
+requests-html==0.10.0
+selenium==4.33.0
+selenium-stealth==1.0.6
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+stack-data==0.6.3
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+w3lib==2.3.1
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+websockets==15.0.1
+wsproto==1.2.0
+xlrd==2.0.2
